py4inf-kor initail setup

--- a/00-cover.tex
+++ b/00-cover.tex
@@ -17,8 +17,8 @@
 \vspace*{2.0in}
 
 \begin{spacing}{3}
-{\huge Python for Informatics}\\
-{\Large Exploring Information}
+{\huge 정보교육을 위한 파이썬}\\
+{\Large 정보 탐색}
 \end{spacing}
 
 \vspace{0.25in}
@@ -29,7 +29,9 @@ Version \theversion
 
 
 {\Large
-Charles Severance\\
+저자: Charles Severance\\
+번역: 이광춘, 한정수 \\
+(xwmooc)
 }
 
 \vfill
