--- a/book_kor_ch03.tex
+++ b/book_kor_ch03.tex
@@ -34,8 +34,8 @@
 % START THE BOOK
 \mainmatter
 
-\input{01-intro}
-\input{02-variables.tex}
+%\input{01-intro}
+%\input{02-variables.tex}
 \input{03-conditional.tex}
 %\input{04-functions.tex}
 %\input{05-iterations.tex}
